--- a/package.json
+++ b/package.json
@@ -17,15 +17,18 @@
     }
   ],
   "dependencies": {
+    "babel-plugin-syntax-async-functions": "^6.8.0",
+    "babel-plugin-transform-regenerator": "^6.8.0",
+    "babel-polyfill": "^6.8.0",
     "babel-preset-es2015": "^6.6.0",
     "babelify": "^7.3.0",
-    "serverless-cors-plugin": "0.4",
+    "serverless-cors-plugin": "^0.4",
     "serverless-mocha-plugin": "^0.5.3",
-    "serverless-optimizer-plugin": "2.3.0"
+    "serverless-optimizer-plugin": "^2.3.0"
   },
   "description": "A REST API project template for serverless 0.5",
   "devDependencies": {
-    "aws-sdk": "2.2.48"
+    "aws-sdk": "^2.2.48"
   },
   "homepage": "https://github.com/SC5/sc5-serverless-boilerplate",
   "license": "MIT",
