--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "babel-polyfill": "^6.8.0",
     "babel-preset-es2015": "^6.6.0",
     "babelify": "^7.3.0",
+    "graphql": "^0.6.0",
+    "graphql-custom-types": "^0.4.0",
     "serverless-cors-plugin": "^0.4",
     "serverless-mocha-plugin": "^0.5.3",
     "serverless-optimizer-plugin": "^2.3.0"
